# futile_di

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
futile_di/: __init__.py
futile_di/source/: depends.py  inject.py
src/futile_di_azya0/: __init__.py  depends.py  inject.py
src/futile_di_azya0/core/: __init__.py  context_processors.py  depends.py  depends_processors.py  inject.py  process_depends.py  wrappers_data.py  wrappers_processor.py
src/futile_di_azya0/exceptions/: __init__.py  depends_exceptions.py
tests/: requirements.txt  test_aiohttp.py  test_main.py
