[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "futile_di_azya0"
version = "0.2.1"
authors = [
  { name="azya0", email="azyadr@yandex.ru" },
]
description = "A small dependency injection library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/azya0/futile_di"
Issues = "https://github.com/azya0/futile_di/issues"
